fix letter-spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   min-width: 320px;
   min-height: 100vw;
   border: 1px solid red;
-  font-family: 'BasisGrotesqueMonoPro', sans-serif;
+  font-family: 'BasisGrotesquePro', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -53,7 +53,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  column-gap: 35px;
+  column-gap: 33px;
 }
 
 @media screen and (max-width: 442px) {
@@ -64,8 +64,8 @@
 }
 
 .header__claim {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 13px;
+  font-weight: 700;
 }
 
 @media screen and (max-width: 442px) {
@@ -76,7 +76,7 @@
 
 .list__item {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 700;
   color: #020202;
 }
 
@@ -112,11 +112,11 @@
 }
 
 .intro__description {
+  max-width: 600px;
   padding-top: 8px;
 }
 
 .text-container {
-  max-width: 600px;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -139,7 +139,7 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 1.2;
-  word-spacing: -16px;
+  letter-spacing: -.5px;
   font-kerning: auto;
 }
 
@@ -156,7 +156,7 @@
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 700;
-  letter-spacing: .7px;
+  letter-spacing: 1px;
   color: #fecda7;
 }
 
@@ -255,6 +255,9 @@
     gap: 30px;
   }
 }
+.people__description {
+  max-width: 400px;
+}
 
 .people__cards {
   padding: 0;
@@ -301,7 +304,8 @@
 .quote__text {
   margin: 0;
   font-size: 13px;
-  word-spacing: -4px;
+  font-weight: 400;
+  word-spacing: 2px;
   line-height: 1.6;
   color: #010101;
 }
